# adaptive-sampling

./: README.md
research/deeplab/: README.md  count_flops.ipynb  eval.py  eval_nus_mobilenetv2.sh  input_preprocess.py  local_test_mobilenetv2.sh  model.py  nus.py  nus_common.sh  test_mobilenetv2_with_nus.sh  test_nus_mobilenetv2.sh  train.py
research/deeplab/datasets/: data_generator.py
research/deeplab/utils/nus/: CMakeLists.txt  UseCython.cmake  __init__.py  build.sh  closest_point.cpp  closest_point.h  closest_point_cython.pyx  interpolation.py  sample.py  utils.py
